syntax = "proto3";
import "common.proto";
package com.metraplasa.mobile.mainsite.proto;
service RollingBannerService {
    rpc getRollingBanner(Empty) returns (RollingBannerResponse){};
}
message RollingBannerResponse{
    Response status = 1;
    repeated RollingBanner data = 2;
    message RollingBanner{
        string mobile = 1;
        string title = 2;
        string image = 3;
        string link = 4;
        string idx = 5;
        string seq = 6;
    }
}